# Mandelbrot

./: CMakeLists.txt  display.cpp  display.h  main.cpp
shaders/: mandelbrot.fs
